# optimal-linalg

./: .gitignore  CMakeLists.txt  README.md
cmake/: SourcesAndHeaders.cmake
include/: linalg.h
src/: linalg.cpp
test/: CMakeLists.txt  optimal-linalg-test.cpp  test-compile-time-expressions.cpp  test-matrix-operations.cpp
